# soma-vault

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
action/: README.md  action.yml
crates/soma-api/: Cargo.toml
crates/soma-api/src/: lib.rs
crates/soma-api/tests/: integration.rs
crates/soma-cli/: Cargo.toml
crates/soma-cli/src/: main.rs
crates/soma-cli/tests/: e2e_run.rs
crates/soma-crypto/: Cargo.toml
crates/soma-crypto/src/: lib.rs
crates/soma-sdk/: Cargo.toml  README.md
crates/soma-sdk/src/: lib.rs
crates/soma-sdk/tests/: integration.rs
crates/soma-server/: Cargo.toml
crates/soma-server/src/: main.rs
crates/soma-storage/: Cargo.toml
crates/soma-storage/src/: error.rs  lib.rs  store.rs  types.rs
crates/soma-storage/src/pg/: attrs.rs  audit.rs  ledger.rs  mod.rs
crates/soma-storage/tests/: integration.rs
dashboard/: Cargo.toml  index.html
dashboard/src/: api.rs  app.rs  main.rs  util.rs
dashboard/src/pages/: access.rs  attributes.rs  audit.rs  config.rs  config_detail.rs  login.rs  mod.rs  project_detail.rs  projects.rs  secret_detail.rs  secrets.rs  settings.rs
deploy/: .env.example  Dockerfile  Dockerfile.dockerignore  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  secret.yaml  service.yaml
docs/: 01-vision-and-positioning.md  02-phase-1-scope.md  03-architecture.md  04-api.md  05-data-model.md  06-config-management.md  07-cli-sdk-dx.md  08-dashboard.md  09-cloud-native-kubernetes.md  10-pricing-and-licensing.md  11-roadmap.md  12-mvp-build-spec.md  13-competitive-roadmap.md  ATOMIC-AUDIT-PLAN.md  README.md  appendix-competitive-analysis.md  appendix-domain-research.md
migrations/: migration-order.yaml
migrations/00_setup/: 01_schema.sql
migrations/01_migrated/1/: 20260625_01_init-vault-schema.sql  20260625_01_seed-attribute-registry.sql  20260625_02_add-token-expires-at.sql  20260626_01_add-tenants-table.sql  20260626_02_tenant-key-to-id.sql  20260626_03_add-token-role.sql  20260626_04_enable-rls.sql  20260626_05_audit-events.sql  20260626_06_env-inheritance.sql
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/test/: integration.test.mjs
