[workspace]
resolver = "2"
members = [
    "crates/soma-crypto",
    "crates/soma-storage",
    "crates/soma-api",
    "crates/soma-cli",
    "crates/soma-server",
    "crates/soma-sdk",
]
exclude = ["dashboard"]

# Keep dev target/ lean. debug = false drops ALL debuginfo (no multi-GB target/);
# strip = true removes symbols too; incremental = false drops the ~1.3 GB cache.
# Prefer `cargo build --release` for real runs. Bump debug locally only if you
# genuinely need a step debugger.
[profile.dev]
debug = false
strip = true
incremental = false

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chaitugsk07/soma-vault"
authors = ["Chaitu Gaddek <dev@kreesalis.com>"]
rust-version = "1.82"

[workspace.dependencies]
# Async runtime + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
soma-schema = { path = "../soma-schema", default-features = false }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identifiers / time
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto (no ring, no openssl)
aes-gcm = "0.10"
aes-kw = { version = "0.2", features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
subtle = "2"
rand = "0.8"
argon2 = "0.5"

# Schema validation
jsonschema = "0.29"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Asset embedding
rust-embed = "8"

# Error handling + observability
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
