[package]
name = "soma-sdk"
description = "In-process Rust client for soma-vault — read secrets and config without shelling out."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
soma-infra = { path = "../../../soma-infra", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true }
