[package]
name = "soma-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "soma-server"
path = "src/main.rs"

[dependencies]
soma-api     = { path = "../soma-api" }
soma-storage = { path = "../soma-storage" }
soma-crypto  = { path = "../soma-crypto" }
soma-infra   = { path = "../../../soma-infra", features = ["db", "tracing", "signal", "crypto", "config", "web"] }
soma-audit-pg = { path = "../../../soma-audit/crates/soma-audit-pg" }

tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true, features = ["trace"] }
tracing     = { workspace = true }
anyhow      = { workspace = true }
rust-embed  = { workspace = true }
rand        = { workspace = true }
sha2        = { workspace = true }
hex         = "0.4"
