[package]
name = "soma-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soma-crypto = { path = "../soma-crypto" }
soma-schema = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
soma-infra = { path = "../../../soma-infra", features = ["testing"] }
