[package]
name = "soma-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soma-crypto = { path = "../soma-crypto" }
soma-audit-core = { path = "../../../soma-audit/crates/soma-audit-core" }
soma-audit-pg = { path = "../../../soma-audit/crates/soma-audit-pg" }
soma-schema = { workspace = true }
soma-infra = { path = "../../../soma-infra", features = ["crypto"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
soma-infra = { path = "../../../soma-infra", features = ["testing", "crypto"] }
